--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - ./integration_tests/outputs/attributes:/usr/app/src/fingerprinting_server/outputs
       - ./integration_tests/outputs/integration_testing:/usr/app/src/test_data/outputs
     environment:
-      - DISPLAY=$DISPLAY
+      - DISPLAY=${DISPLAY}
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
     devices:
@@ -42,6 +42,6 @@ services:
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
     environment:
-      - DISPLAY=$DISPLAY
+      - DISPLAY=${DISPLAY}
     volumes:
       - ./system_tests/data:/usr/app/src/data
