hopefully fixed compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
       target: system
     network_mode: host
     privileged: true
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
+    environment:
+      - DISPLAY=host.docker.internal:0.0
     volumes:
       - ./system_tests/data:/usr/app/src/data
 
