--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,11 @@ services:
       target: system
     network_mode: host
     privileged: true
-    extra_hosts:
-      - "host.docker.internal:172.17.0.1"
     environment:
       - DISPLAY=host.docker.internal:0.0
     volumes:
       - ./system_tests/data:/usr/app/src/data
+      - ./system_tests/get_data/configuration.py:/usr/app/src/get_data/configuration.py
 
   testing_integration_windows:
     build:
@@ -25,6 +24,8 @@ services:
     volumes:
       - ./integration_tests/outputs/attributes:/usr/app/src/fingerprinting_server/outputs
       - ./integration_tests/outputs/integration_testing:/usr/app/src/test_data/outputs
+      - ./integration_tests/client_simulator/example_configs/client.json:/usr/app/src/client_simulator/example_configs/client.json
+      - ./integration_tests/client_simulator/example_configs/server.json:/usr/app/src/client_simulator/example_configs/server.json
 
   testing_integration_linux:
     build:
@@ -34,13 +35,15 @@ services:
       - ./integration_tests/outputs/attributes:/usr/app/src/fingerprinting_server/outputs
       - ./integration_tests/outputs/integration_testing:/usr/app/src/test_data/outputs
       - /tmp/.X11-unix:/tmp/.X11-unix
+      - ./integration_tests/client_simulator/example_configs/client.json:/usr/app/src/client_simulator/example_configs/client.json
+      - ./integration_tests/client_simulator/example_configs/server.json:/usr/app/src/client_simulator/example_configs/server.json
     environment:
       - DISPLAY=${DISPLAY}
     privileged: true
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
     devices:
-      - "/dev/snd:/dev/snd"
+      - /dev/snd:/dev/snd
 
   testing_system_linux:
     build:
@@ -55,3 +58,4 @@ services:
     volumes:
       - ./system_tests/data:/usr/app/src/data
       - /tmp/.X11-unix:/tmp/.X11-unix
+      - ./system_tests/get_data/configuration.py:/usr/app/src/get_data/configuration.py
